Ui and API enpoinst fixed

--- a/web/index.html
+++ b/web/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<header>
+<head>
 	<title>Demo: STT service, an online speech to text transcription service</title>
-	<link rel="stylesheet" type="text/css" href="static/main.css">
+	<link rel="stylesheet" type="text/css" href="static/css/main.css">
 	<script src="https://code.jquery.com/jquery-3.5.0.js"></script>
-</header>
+</head>
 
 <body>
 <h2>STT Login/Registration Form</h2>
@@ -52,7 +52,8 @@
 			</div>
 		</div>
 	</div>
-	<script src="static/main.js"></script>
+	<script src="static/js/init.js"></script>
+	<script src="static/js/index.js"></script>
 </div>
 </body>
 </html>
